# checklist

./: .env  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  NOTE.md  README.md  configuration.yaml
backend/: Cargo.toml
backend/.sqlx/: query-144554c9739f4a48827c2f9abb9b5b815de5b033f735de07fb2f5179492d0d26.json  query-1841eb26e46ce28d685162d73bf20874ca7207f1ab6e1bc09d26f029ec7c028d.json  query-1de2c7f6243efd68afba1a82557ae1eefa49a64928ff588d98582c6dd503f8b9.json  query-360aa7d04ac5e1694c9939be2a96f9470ec53c0f5e3b89635ab2809b78e6d8eb.json  query-481e19e9340c23767dcbcabd433dc364b58a54a7b319a4759af6eb60160fff99.json  query-4d44c083adca482f7782733c18195d9a28c2a9b9dd0d6facf716a74d18ed81e5.json  query-50834183c2b706421db77962fd9b4ae966ff0ca179f80850a33edcaba80141d9.json  query-682103df001c0357deb9e625cab72579949230e816b99f76aedbbd0453078d32.json  (+20 more)
configuration/: base.yaml  local.yaml
frontend/: components.json  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vite.config.ts
goldens/: complete_todo_item.json  create_todo_item.json  get_todo_item.json  list_todo.json  list_todo_item.json  update_todo_item.json
infra/: README.md  ansible.cfg  check.yml  deploy.yml  requirements.yml  setup.yml
migrations/: 20250210004708_create_initial_tables.sql
scripts/: add_authorized_user.sh  build.sh  deploy.sh  prepare_sqlx.sh  run.sh  setup.sh  start_db.sh  stop_db.sh  test.sh
src/: configuration.rs  error.rs  extractors.rs  golden.rs  lib.rs  main.rs  startup.rs  telemetry.rs
tests/: health_check.rs
(+121 files in other folders)
