[package]
name = "checklist"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path ="src/main.rs"
name = "checklist"

[dependencies]
axum = "0.8.1"
color-eyre = "0.6.3"
config = "0.15.7"
eyre = "0.6.12"
secrecy = { version = "0.10.3", features = ["serde"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "time"] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.11"
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tower = "0.5.2"
time = { version = "0.3.37", features = ["parsing", "serde-human-readable", "serde-well-known"] }

[dev-dependencies]
claims = "0.8.0"
reqwest = "0.12"
serde_json = "1.0.138"
rand = "0.9.0"
similar = "2.7.0"

